updated to say Available and Reserved Tables instead of seats and fixed wrapping headers

--- a/client/src/components/FloorPlan/style.css
+++ b/client/src/components/FloorPlan/style.css
@@ -1,6 +1,12 @@
 h4{
   color: white;
 }
+
+.left, 
+.right {
+  white-space: nowrap;
+}
+
 #seatsContainer {
   width: 600px;
   margin: auto;
